# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
  emacs-cvs-23.0.0-r3.ebuild:
  correct dependency on the latest eselect module version

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +emacs-cvs-22.0.95-r3.ebuild, +emacs-cvs-22.0.9999-r7.ebuild,
  +emacs-cvs-23.0.0-r3.ebuild:
  Don't install emacs executable twice; Suffix changed from .emacs- to -emacs-
  for better compatibility with XEmacs.

  18 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removing a superfluos space

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  correct hesiod inclusion

  16 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.95-r2.ebuild:
  inherit alternatives no longer needed.

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  added hesiod USE flag which pulls in support for a different gethost method;
  make xpm support depending on xpm USE flag; emacs-22 CVS also gets a
  straighter naming for the CVS checkout

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  correct definition of ${S} so it can find its source files; pointed out by
  Flameeyes on IRC

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  added ECVS_LOCALNAME to avoid checking out 22.0.9999 and 23.* in the same
  distfiles directory

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removed commented out code, so the ebuilds look a bit lighter
