@@ -15,30 +15,30 @@ EBUILD emacs-cvs-22.0.95-r2.ebuild 6513 RMD160 216ce5248a0d4ae20f24c49f8bf19ebd5
 MD5 b0373d2c10d31d606ecb80eb4f24150d emacs-cvs-22.0.95-r2.ebuild 6513
 RMD160 216ce5248a0d4ae20f24c49f8bf19ebd521be698 emacs-cvs-22.0.95-r2.ebuild 6513
 SHA256 d175024a482c8d62d8f6322f3c68fff8bf5f9418d319a138bb0c8dbc0fab119e emacs-cvs-22.0.95-r2.ebuild 6513
-EBUILD emacs-cvs-22.0.95-r3.ebuild 6500 RMD160 2013bf80ff913b8ede302ebf048077eb08951459 SHA1 a1081019676d8f1241cf50b64308520341c45846 SHA256 1006ca9882aabb04c917d841e5000778394356bcb110e41b0a381417aa7dab4c
-MD5 ed44c3039f6ebd03c7caac5bfebfcd5a emacs-cvs-22.0.95-r3.ebuild 6500
-RMD160 2013bf80ff913b8ede302ebf048077eb08951459 emacs-cvs-22.0.95-r3.ebuild 6500
-SHA256 1006ca9882aabb04c917d841e5000778394356bcb110e41b0a381417aa7dab4c emacs-cvs-22.0.95-r3.ebuild 6500
+EBUILD emacs-cvs-22.0.95-r3.ebuild 6606 RMD160 6b7d558a4437dc9e64b50b154cb2cddb9b73fae5 SHA1 40c6d9023c0af516be5d924fc38d946722b4bec4 SHA256 74572f083726e9fd762cdd6f7751a1479cccf2f8ee1a979491ee38c6b9ddb283
+MD5 8b04ce991e895e7601b59ae4408ed81d emacs-cvs-22.0.95-r3.ebuild 6606
+RMD160 6b7d558a4437dc9e64b50b154cb2cddb9b73fae5 emacs-cvs-22.0.95-r3.ebuild 6606
+SHA256 74572f083726e9fd762cdd6f7751a1479cccf2f8ee1a979491ee38c6b9ddb283 emacs-cvs-22.0.95-r3.ebuild 6606
 EBUILD emacs-cvs-22.0.9999-r6.ebuild 6578 RMD160 c0e078a1713b439d5bde6b6dae12c04731d0a0c7 SHA1 0f82bdc9b1e19116c0775675eb5e003abc51dc19 SHA256 ed88165ecc941525c5396af519eb2a5c298f59bf0dfa9d7891b1a71dec5603ae
 MD5 f136ca8aa40b5b3b69709566abd66f32 emacs-cvs-22.0.9999-r6.ebuild 6578
 RMD160 c0e078a1713b439d5bde6b6dae12c04731d0a0c7 emacs-cvs-22.0.9999-r6.ebuild 6578
 SHA256 ed88165ecc941525c5396af519eb2a5c298f59bf0dfa9d7891b1a71dec5603ae emacs-cvs-22.0.9999-r6.ebuild 6578
-EBUILD emacs-cvs-22.0.9999-r7.ebuild 6565 RMD160 dd63d43e5244138d023945f923f85b9740b58ff0 SHA1 55b422d30bf0759a2bd45385720801c983f96b82 SHA256 f17285f7a13ddbd4a7179099da1c1305fd8f727cbebfd261a8b69fcd39da1dc9
-MD5 346d853f200e203d990e251aaa50a89e emacs-cvs-22.0.9999-r7.ebuild 6565
-RMD160 dd63d43e5244138d023945f923f85b9740b58ff0 emacs-cvs-22.0.9999-r7.ebuild 6565
-SHA256 f17285f7a13ddbd4a7179099da1c1305fd8f727cbebfd261a8b69fcd39da1dc9 emacs-cvs-22.0.9999-r7.ebuild 6565
+EBUILD emacs-cvs-22.0.9999-r7.ebuild 6671 RMD160 86f9437d3f5675f62e9a2cf65a0e76f90314d650 SHA1 0a13d1eb2dbec1e6f76fa2723d0118fc00962e6f SHA256 a37b87cb3e718a39c9f3a6397ebbe01ec2d8d34940c7df60e8af02c9e3fb3f20
+MD5 7739b559badc6801c072ef55055b9ffe emacs-cvs-22.0.9999-r7.ebuild 6671
+RMD160 86f9437d3f5675f62e9a2cf65a0e76f90314d650 emacs-cvs-22.0.9999-r7.ebuild 6671
+SHA256 a37b87cb3e718a39c9f3a6397ebbe01ec2d8d34940c7df60e8af02c9e3fb3f20 emacs-cvs-22.0.9999-r7.ebuild 6671
 EBUILD emacs-cvs-23.0.0-r2.ebuild 6835 RMD160 4420d82848adbbc1ddc7f434325eab6023e32342 SHA1 4fc9ddb6c0f3ec873e5bbf48fc10bd56f3e0df4c SHA256 c091857c05f45494aad5281412c92bd88cee36c5f76773cdbce84a82d6afb9e4
 MD5 95cfb5d8c6e877f6d2b2305e67e6691c emacs-cvs-23.0.0-r2.ebuild 6835
 RMD160 4420d82848adbbc1ddc7f434325eab6023e32342 emacs-cvs-23.0.0-r2.ebuild 6835
 SHA256 c091857c05f45494aad5281412c92bd88cee36c5f76773cdbce84a82d6afb9e4 emacs-cvs-23.0.0-r2.ebuild 6835
-EBUILD emacs-cvs-23.0.0-r3.ebuild 6822 RMD160 b50bdc3abb94fef199f0f85443911220a5449761 SHA1 9bd3391b98453f070d709a681fca1c8dd7cdf886 SHA256 e9612073eeeeec8ec0000441bda8eafe84b6a46df46a84852e2726c4ca901a39
-MD5 00e9c09f0020d96f0fba79a50159339f emacs-cvs-23.0.0-r3.ebuild 6822
-RMD160 b50bdc3abb94fef199f0f85443911220a5449761 emacs-cvs-23.0.0-r3.ebuild 6822
-SHA256 e9612073eeeeec8ec0000441bda8eafe84b6a46df46a84852e2726c4ca901a39 emacs-cvs-23.0.0-r3.ebuild 6822
-MISC ChangeLog 4667 RMD160 7afd0257dd9449bfe27ac614394dc14f2551d8c4 SHA1 29bd2910cdab3852a075e188b7ef7cc4bed9fa6d SHA256 98390a22b6938a188e995030871d8f55a654f7c74d62cf4abea127d47c0be2d1
-MD5 cc3c782365bcfc4c9212659f30e90dbd ChangeLog 4667
-RMD160 7afd0257dd9449bfe27ac614394dc14f2551d8c4 ChangeLog 4667
-SHA256 98390a22b6938a188e995030871d8f55a654f7c74d62cf4abea127d47c0be2d1 ChangeLog 4667
+EBUILD emacs-cvs-23.0.0-r3.ebuild 6928 RMD160 a8ef017f9135e012fdd34c010886624fcf9b2cf5 SHA1 1ba7f2f5c4e4556ce53fd41a01a22af60bc243d0 SHA256 0b70f9aa7ae2965f1bdc9d9bad227cc2f05cfdbf5e173e517ce3374dd28183e2
+MD5 09e08e3873221fed6ca656b6de5d3ed3 emacs-cvs-23.0.0-r3.ebuild 6928
+RMD160 a8ef017f9135e012fdd34c010886624fcf9b2cf5 emacs-cvs-23.0.0-r3.ebuild 6928
+SHA256 0b70f9aa7ae2965f1bdc9d9bad227cc2f05cfdbf5e173e517ce3374dd28183e2 emacs-cvs-23.0.0-r3.ebuild 6928
+MISC ChangeLog 4870 RMD160 e1073beeab58d71192c8dc6c1f4f0e99e468fe64 SHA1 a186dd85b5f1b7bf0a8b57878f6ba24d248880df SHA256 8a685c9bbba5596b9608ca32bd59a6854cdc7a49f9b9c66670c715b564650a2e
+MD5 26880b387ab6d24a8fd7e273ea591325 ChangeLog 4870
+RMD160 e1073beeab58d71192c8dc6c1f4f0e99e468fe64 ChangeLog 4870
+SHA256 8a685c9bbba5596b9608ca32bd59a6854cdc7a49f9b9c66670c715b564650a2e ChangeLog 4870
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
