@@ -5,6 +5,11 @@
   19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
   emacs-cvs-23.0.0-r3.ebuild:
+  remove colliding files between slots, see bug 169033
+
+  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
+  emacs-cvs-23.0.0-r3.ebuild:
   correct dependency on the latest eselect module version
 
   19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
